# olm

./: .gitignore  GETTING_STARTED.md  IMPLEMENTER_INSTRUCTIONS.md  LICENSE  install.bat  launch.bat  prompt_implementer_R02.md  prompt_implementer_R02_ui.md  pyproject.toml  requirements.txt
olm/: README.md  __init__.py
olm/core/: app_config.py  canonical.py  catalogue_matcher.py  circulation_analysis.py  coverage_analysis.py  detection_config.py  dsl_common.py  matching_config.py  pattern_dsl.py  pattern_generator.py  room_dsl.py  room_model.py  spacing_config.py  types.py
olm/ingestion/: dev_viewer.py  extract.py  ingestion_viewer.py  orientation_check.py  test_comb.py
olm/server/: app.py
olm/static/: block_constants.js  block_geometry.js  block_svg.js  canonical_io.js  catalogue.js  config.js  editor.js  floor_plan.js  ingestion.js  ingestion_export.js  ingestion_scale.js  ingestion_serialize.js  init.js  init_resize.js  init_rvtool.js  render_shared.js  room_sync_helpers.js  shared.js  store.js  style.css
olm/templates/: blocks_preview.html  desk_preview.html  matching_viewer.html  pattern_editor.html  reference_blocks_constraints.html
olm/tests/: test_canonical.py  test_catalogue_matcher.py  test_pattern_dsl.py  test_pattern_generator.py  test_room_model.py  test_spacing_config.py
olm/tools/: colorize_enhanced.py
scripts/: commit_translations.json  publish_to_github.sh
